# Neuro-Multiverse

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.in  requirements-gpu-lock.txt  requirements-lock.txt  requirements.in
configs/preprocessing/: one_subject_pilot.template.yaml  one_subject_qc_checklist.template.md
containers/: README.md  checksums.txt  fmripost_aroma.version  fmriprep.version
data/: README.md
data/acquisition_authorizations/: ds000030_pilot.template.json
data/manifests/: subject_manifest.template.tsv
docs/: acquisition_register.md  citation_inventory.md  computational_budget.md  data_usage.md  deviations.md  preprocessing_pilot.md  preregistration.md  reproducibility.md  security.md  setup_windows.md
docs/decisions/: 0001-study-design.md
scripts/: acquire_ds000030_pilot.py  build_bids_compatibility_view.py  prepare_preprocessing_pilot.py  validate_ds000030_pilot.py  verify.ps1  verify.sh  verify_data_governance.py  verify_neuroimaging.sh  verify_system.ps1
src/neuromultiverse/: __init__.py  bids_compatibility.py  data_contracts.py  ds000030_pilot.py  preprocessing_readiness.py  runtime.py
tests/: test_acquire_ds000030_pilot.py  test_bids_compatibility.py  test_data_contracts.py  test_preprocessing_readiness.py  test_runtime.py  test_validate_ds000030_pilot.py
