[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromultiverse"
version = "0.1.0"
description = "Analysis code for a preregistered multiverse study of analytic variability in resting-state functional-connectivity biomarkers."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "Proprietary" }
authors = [{ name = "Rohith Sundar Jonnalagadda" }]
keywords = ["neuroimaging", "functional-connectivity", "multiverse", "reproducibility"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Private :: Do Not Upload",
]

dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "pyarrow>=14",
    "pydantic>=2.5,<3",
    "PyYAML>=6",
    "nibabel>=5.2,<6",
    "nilearn>=0.10,<1",
    "pybids>=0.16,<1",
    "scikit-learn>=1.4,<2",
    "joblib>=1.3,<2",
    "platformdirs>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pip-tools>=7.4",
    "types-PyYAML",
]

[project.urls]
Repository = "https://github.com/sundar139/Neuro-Multiverse"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuromultiverse = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".venv", "renv", "data", "containers"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "S",    # flake8-bandit
]
ignore = [
    "S603",  # subprocess call: this project invokes git with a fixed argument list
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is the point of a test

[tool.ruff.lint.isort]
known-first-party = ["neuromultiverse"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/neuromultiverse"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
]
